add routs from ЧДММ
